25 Nov 2003 mipsator
 * added support for -o and -g options (owner and group) of pmkinstall.
 * added mode argument to makepath() in pathtools.
 * updated pmk.c to provide mode to makepath().
 * moved defines from source to header in pathtools.
 * added support for -d option (directory creation) of pmkinstall.
 * updated makefiles to include pathtools for pmkinstall.

24 Nov 2003 mipsator
 * started to rewrite pmkinstall from scratch (much easier than making
	xinstall portable).
 * implemented -m option (only octal values) of pmkinstall.
 * added basic support for symbolic values in -m option of pmkinstall.

23 Nov 2003 mipsator
 * removed oboslete definitions in kw_pmkscan[].

# snapshot 0.7.4

18 Nov 2003 mipsator
 * added DESTDIR and fixed Makefiles.

# snapshot 0.7.3

18 Nov 2003 mipsator
 * disabled build of pmkinstall as it's still work in progress.
 * added some getopts options to pmkcfg.sh (prefix override).
 * updated Makefile.pmk and Makefile in sync with pmkcfg.sh changes.
 * updated README and INSTALL to sync with pmkcfg.sh changes.

17 Nov 2003 mipsator
 * removed stuff in pmkinstall to make sunos happy.

14 Nov 2003 mipsator
 * replaced remaining warn() and warnx() calls in pmkinstall.

13 Nov 2003 mipsator
 * removed err() and errx() calls and replaced by errof() in pmkinstall.
 * removed paths.h in pmkinstall.

# snapshot 0.7.2

10 Nov 2003 mipsator
 * fixed init of CXXFLAGS.
 * added init of CXX.

# snapshot 0.7.1

07 Nov 2003 mipsator
 * improved init of CFLAGS, CXXFLAGS, CPPFLAGS, LIBS, LDFLAGS and
	DEBUG with values gathered from make.
 * changed target of get_make_var() from test to all.
 * enabled pmkinstall in Makefile and Makefile.pmk including man page.
 * added pmkinstall man page.
 * modified compat.c to make ansi compiler happy. 

04 Nov 2003 mipsator
 * added makepath() in pathtools.
 * modified process_template() to use makepath().

27 Oct 2003 mipsator
 * updated Makefile.pmk to build in a test directory.